Archive/ab47b69f0e286816d30f522d9eed07ab-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp: In function 'int main()':
main.cpp:10:32: error: invalid conversion from 'void*' to 'int*' [-fpermissive]
     int* x = malloc(sizeof(int));
                                ^
